--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Resume Page</title>
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="https://fonts.google.com/specimen/Merriweather?preview.size=30">
 	</head>
-	<body>
+	<body class="index-body">
 		<nav>
-  			<ul>
-    			<li><a href="index.html">Resume</a></li>
-    			<li><a href="About.html">Interests + Projects</a></li>
-   	 		<li><a href="Biography.html">Biography</a></li>
+  			<ul class="header-class">
+    			<li class="header-li"><a class="header-a" href="index.html">Resume</a></li>
+    			<li class="header-li"><a class="header-a" href="Biography.html">Interests + Projects</a></li>
+   	 			<li class="header-li"><a class="header-a" href="About.html">Biography</a></li>
   			</ul>
 		</nav>
-	
-		<h1>Krish Dhungana's Resume</h1>
-		<h2><u>Contact Information</u></h2>
-		<p>Phone: 773-567-4750</p>
-		<p>Email: krishdhungana7@gmail.com</p>
-		<p>Address: 2724 W Berwyn Ave, Chicago IL</p>
-	
-
+		
+		
+		<h1 class="index-title">Krish Dhungana's Resume</h1>
+		
+		<div class="center">
+		<p class="index-contact">Phone: 773-567-4750</p>
+		<p class="index-contact">Email: krishdhungana7@gmail.com</p>
+		<p class="index-contact">Address: 2724 W Berwyn Ave, Chicago IL</p>
+		</div>
+		
+		<div class="index-text">
 		<h2><u>Experience</u></h2>
 		<h3>Front Desk • Volunteer • Chicago Public Library</h3>
 		<h4>June 2020 - August 2020</h4>
@@ -64,6 +70,6 @@
 		<h4>University:</h4>
 		<p>2021-Present</p>
 		<p>Illinois Institue of Technology</p>
-
+	</div>
 	</body>
 </html>
