--- a/About.html
+++ b/About.html
@@ -3,37 +3,44 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>About Me Page</title>
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/normalize.css">
 	</head>
-	<body>
+	<body class="life-body">
 		<nav>
-  			<ul>
-    			<li><a href="index.html">Resume</a></li>
-    			<li><a href="About.html">Interests + Projects</a></li>
-   	 		<li><a href="Biography.html">Biography</a></li>
+  			<ul class="header-class">
+    			<li class="header-li"><a class="header-a" href="index.html">Resume</a></li>
+    			<li class="header-li"><a class="header-a" href="Biography.html">Interests + Projects</a></li>
+   	 			<li class="header-li"><a class="header-a" href="About.html">Biography</a></li>
   			</ul>
 		</nav>
 		
+		<div class="about-page">
+		<div class="about-header">
 		<h3>Early Life:</h3>
-		<ul>
-			<li>Kathmandu, Nepal</li>
-			<li> I was born in Kathmandu, Nepal. Which is a small country in south Asia. I was born there and lived there till the age of 5.</li>
-			<li>New York City, New York</li>
-			<li>After my parents won a greencard lottery, we moved to New York. This was a big change, as Kathmandu and New York are very different. I attended preschool and kindergarden in New York.</li>
-			<li>Chicago, IL</li>
-			<li>After living in New York for 3 years, we moved to Chicago. From one big city to another. I then began elementary school in Chicago. </li>
-		</ul>
-		<img src="media/Map.png" alt="Flight Tracker" width="600" height="300">
+		</div>
+		<div class="about-text">
+		<p>I was born in Kathmandu, Nepal. Which is a small country in south Asia. 
+		I was born there and lived there till the age of 5. After my parents won a greencard lottery, we moved to New York. This was a big change, as Kathmandu and New York are very different. I attended preschool and kindergarden in New York.
+		After living in New York for 3 years, we moved to Chicago. From one big city to another. I then began elementary school in Chicago. </p>
+
+		<img class="about-img" src="media/Map.png" alt="Flight Tracker">
+		</div>
 		
+		<div class="about-header">
 		<h3>Middle Life:</h3>
+		</div>
+		
+		<div class="about-text">
 		<p> During my elementary school life, I was on the basketball and volleyball team. I was also on the math team and guitar club. </p>
 		<p>After elementary school I transitioned into high school. I went to Von Steuben, here in Chicago. Here is where I decided to stick with one sport(swimming) and where I began to learn code.
 		I found my web development and web design classes to be the most interesting, hence why I am an ITM/Cybersecurity major now. Through my knowledge of HTML, I began to make websites. It started with a current events webpage and it went as far as creating the class webpage for my teacher. </p>
 		<p>Below is one of the first websites I ever made:</p>
-		<img src="media/FirstSite.png" alt="Nepal in a Map" width="600" height="300">
+		<img class="about-img" src="media/FirstSite.png" alt="Nepal in a Map">
 		<p>Other than school, I held a number jobs. Such as working at Kohls and as a life guard. This was a great base for me, as it was my first taste of the real world. I understood what holding a job meant and the responsibility that came with it. 
 		<p> Lastly, travel was a huge part of my life during this time. My family and I would travel at least once a year. </p>
 		<p>Here is a list of all the places I have visited (airports included).</p>
-		<ul>
+		<ul class="about-list">
 			<li>20 US States (Too many to name)</li>
 			<li>England</li>
 			<li>UAE -- Dubai</li>
@@ -44,11 +51,17 @@
 			<li>France</li>
 			<li>Netherlands</li>
 		</ul>
-		
+		</div>
+			
+		<div class="about-header">
 		<h3>Currently:</h3>
+		</div>
+		
+		<div class="about-text">	
 		<p> Now, I am a college student at Illinois Institute of Technology in, Chicago, IL. I am a ITM/Cybersecurity major, in my second year. I have already taken a number of coding and IT management classes.</p>
 		<p>While college isn't in session, I work as a Tech Specialist at CDW. The Vernon Hills Location. My prior understanding of work and improved soft skills helped me land this summer job. I worked there this past summer, taking apart hardware and installing software. It was a great experience into the IT industry.</p>
 		<p>If you want to read about my other interests and what I do in my freetime, feel free to check out the Interests + Projects page.</p>
-	
+		</div>
+		</div>
 	</body>
 </html>
