--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
 		<img class="about-img" src="media/FirstSite.png" alt="Nepal in a Map">
 		<p>Other than school, I held a number jobs. Such as working at Kohls and as a life guard. This was a great base for me, as it was my first taste of the real world. I understood what holding a job meant and the responsibility that came with it. 
 		<p> Lastly, travel was a huge part of my life during this time. My family and I would travel at least once a year. </p>
-		<p>Here is a list of all the places I have visited (airports included).</p>
+		<p>Here is a list of all the places I have visited.</p>
 		<ul class="about-list">
 			<li>20 US States (Too many to name)</li>
 			<li>England</li>
