--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 		<div class="index-text">
 		<h2><u>Experience</u></h2>
 		<h3>Front Desk • Volunteer • Chicago Public Library</h3>
-		<h4>June 2020 - August 2020</h4>
+		<h4 class="index-date">June 2020 - August 2020</h4>
 		<p>Volunteered with the Budlong Woods branch of the CPL. While there I assisted in taking messages, scanning, documents, and answering queries. Gaining valuable customer service experience, by dealing with library patrons. Listened to all customer needs and helped issues regarding the sign up process.</p>
 	
 		<h3>Sales • Kohls</h3>
-		<h4>June 2021 – August 2021</h4>
+		<h4 class="index-date">June 2021 – August 2021</h4>
 		<p>Through the summer of 2021 I worked at the Kohls Lincolnwood Location. Both on the salesfloor and at the register. Worked on a team which encouraged collaboration and empowerment. I took the initiative to help customers and manage the area I was in charge of.</p>
 		
 		<h3>Level 1 Tech Specialist • CDW</h3>
-		<h4>June 2022  – August 2022</h4>
+		<h4 class="index-date">June 2022  – August 2022</h4>
 		<p>During the summer of 2022, I worked at the CDW – Vernon Hills location. During my time, I installed and uninstalled hardware from laptops. Overtime, I gained valuable skills in the understanding of computer hardware and modification.</p>
 		
 		<h2><u>Projects</u></h2>
