--- a/About.html
+++ b/About.html
@@ -3,65 +3,69 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>About Me Page</title>
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/normalize.css">
 	</head>
-	<body class="life-body">
+	<body>
 		<nav>
-  			<ul class="header-class">
-    			<li class="header-li"><a class="header-a" href="index.html">Resume</a></li>
-    			<li class="header-li"><a class="header-a" href="Biography.html">Interests + Projects</a></li>
-   	 			<li class="header-li"><a class="header-a" href="About.html">Biography</a></li>
+  			<ul>
+    			<li><a href="index.html">Resume</a></li>
+    			<li><a href="About.html">Interests + Projects</a></li>
+   	 		<li><a href="Biography.html">Biography</a></li>
   			</ul>
 		</nav>
+		<h1>Interests/Projects</h1>
+		<h3><u>Interests:</u></h3>
 		
-		<div class="about-page">
-		<div class="about-header">
-		<h3>Early Life:</h3>
-		</div>
-		<div class="about-text">
-		<p>I was born in Kathmandu, Nepal. Which is a small country in south Asia. 
-		I was born there and lived there till the age of 5. After my parents won a greencard lottery, we moved to New York. This was a big change, as Kathmandu and New York are very different. I attended preschool and kindergarden in New York.
-		After living in New York for 3 years, we moved to Chicago. From one big city to another. I then began elementary school in Chicago. </p>
-
-		<img class="about-img" src="media/Map.png" alt="Flight Tracker">
-		</div>
+		<h4>Sports:</h4>
+		<p>
+		I am a huge sports fan. Besides baseball and golf, I will watch anything. Soccer, basketball, football, tennis, hockey (playoff only).
+		I have been to multiple bears and bulls games and two soccer games in England. On top of watching the games, I also play fantasy football, soccer, and basketball. You can read more about that below.
+		</p>
+				
+		<h4>Fantasy Football:</h4>
+		<p>One of my favorite hobbies during the fall and winter months is watching football. A perfect companion to this is, fantasy football. As of now I am currently in three leagues with friends and family. As the clock ticks down the on season starting, 
+		I have done a countless amount of mocks in preparation for the leagues. The pride and monetary value of fantasy football is fantastic, the thrill of winning your league can't be beat. With that being said, I hope to win all three of my leagues this year.
+		While I used other websites for my fantasy data now, I hope to be using my own program going forward. You can read more about that below. </p>
+		<img src="media/EspnTeam.png" alt="Espn Fantasy Team" width="300" height="400">
+		<img src="media/YahooTeam.png" alt="Yahoo Fantasy Team" width="300" height="400">
 		
-		<div class="about-header">
-		<h3>Middle Life:</h3>
-		</div>
 		
-		<div class="about-text">
-		<p> During my elementary school life, I was on the basketball and volleyball team. I was also on the math team and guitar club. </p>
-		<p>After elementary school I transitioned into high school. I went to Von Steuben, here in Chicago. Here is where I decided to stick with one sport(swimming) and where I began to learn code.
-		I found my web development and web design classes to be the most interesting, hence why I am an ITM/Cybersecurity major now. Through my knowledge of HTML, I began to make websites. It started with a current events webpage and it went as far as creating the class webpage for my teacher. </p>
-		<p>Below is one of the first websites I ever made:</p>
-		<img class="about-img" src="media/FirstSite.png" alt="Nepal in a Map">
-		<p>Other than school, I held a number jobs. Such as working at Kohls and as a life guard. This was a great base for me, as it was my first taste of the real world. I understood what holding a job meant and the responsibility that came with it. 
-		<p> Lastly, travel was a huge part of my life during this time. My family and I would travel at least once a year. </p>
-		<p>Here is a list of all the places I have visited.</p>
-		<ul class="about-list">
-			<li>20 US States (Too many to name)</li>
-			<li>England</li>
-			<li>UAE -- Dubai</li>
-			<li>Canada</li>
-			<li>Mexico</li>
-			<li>Qatar</li>
-			<li>Singapore</li>
-			<li>France</li>
-			<li>Netherlands</li>
+		<h4>Technology:</h4>
+		<p> I am also a huge tech buff. Specifically with apple devices. I have watched the "Techtember" live stream for the last 3 years. I have also attended a number of live Apple sessions at Apple stores and online meets.
+		I am fascinated with the improvements that are made every year (while some years they are minimal). As I progress through University, I hope to have an internship or work with Apple in the future.
+		</p>	
+	
+		<h4>Athletics:</h4>
+		<h4>Swimming + Running</h4>
+		<p> I have been a swimmer since I was in elementary school. I was a varsity swimmer in high school and swam for the "Swedish Fish" (Galter Life Center Swim Team).
+		My events included the 200m butterfly, 100m IM, and 200m relay. Since the pool wasn't open during covid, I began to run. Since then, I have done it at least 3 days a week.
+		I'm not the fastest, but I am included my best times below.
+		</p>
+		<ul>
+			<li>1 mile: 5:15 mins</li>
+			<li>5K: 23:54 mins</li>
 		</ul>
-		</div>
-			
-		<div class="about-header">
-		<h3>Currently:</h3>
-		</div>
+		<img src="media/SwimCap.png" alt="Yahoo Fantasy Team" width="300" height="300">
 		
-		<div class="about-text">	
-		<p> Now, I am a college student at Illinois Institute of Technology in, Chicago, IL. I am a ITM/Cybersecurity major, in my second year. I have already taken a number of coding and IT management classes.</p>
-		<p>While college isn't in session, I work as a Tech Specialist at CDW. The Vernon Hills Location. My prior understanding of work and improved soft skills helped me land this summer job. I worked there this past summer, taking apart hardware and installing software. It was a great experience into the IT industry.</p>
-		<p>If you want to read about my other interests and what I do in my freetime, feel free to check out the Interests + Projects page.</p>
-		</div>
-		</div>
+		<h3><u>Projects:</u></h3>
+		<h4>Java Project:</h4>
+		<p>My friends and I from highschool have been working on what we call the "fantasy analysis calculator." 
+		For the last 2 weeks, my friends and I have been waiting for the season to start. While waiting, we decided to try and make a Java program that helps us draft our optimal lineups.
+		This is a Java program that takes in data from previous fantasy football season and dishes out fresh analysis and numbers. We are still in the very early stages of this program, and are excited to see where it goes.
+		As the NFL season progress forward, we plan to enter player data on a weekly basis. Hopefully, by the end of the season we have a season worth of data to work with and we can create a program for calculating optimal ADP's. (Average Draft Position)
+		</p>
+		
+		<h4>Photoshop/Editing:</h4>
+		<p> Through the pandemic, I took up photoshop. Originally, my high school digital imaging class peaked my interest, I proceeded to take it further. I even made a "Fiver" account and took offers from customers. 
+		While I definitely wasn't the best, I had a few takers. I made some money off of it, but haven't done it in a while. The images below are some of the pieces I made. 
+		</p>
+		<img src="media/Jordan.jpeg" alt="Espn Fantasy Team" width="200" height="300">
+		
+		<h4>Video Project:</h4>
+		<p> While in Nepal, I gave a speech at a local highschool. During my speech I spoke about life and education in the US.
+		<p>Here is a short clip from that speech below:</p>
+		<video width="320" height="240" controls>
+  		<source src="media/SpeechClip.mp4" type="video/mp4">
+		</video>
 	</body>
 </html>
+
