--- a/Biography.html
+++ b/Biography.html
@@ -48,7 +48,7 @@
       					<h2 class="title">Athletics:</h2>
        					<h4>Swimming + Running</h4>
       					<p> I have been a swimmer since I was in elementary school. I was a varsity swimmer in high school and swam for the "Swedish Fish" (Galter Life Center Swim Team).
-							My events included the 200m butterfly, 100m IM, and 200m relay. Since the pool wasn't open during covid, I began to run. Since then, I have done it at least 3 days a week.</p>
+							My events included the 200m butterfly, 100m I.M., and 200m relay. Since the pool wasn't open during covid, I began to run. Since then, I have done it at least 3 days a week.</p>
     					<img class="bioimg" src="media/SwimCap.png" alt="Swim Cap">
     				</div>
     				<div class="card">
