--- a/Biography.html
+++ b/Biography.html
@@ -5,6 +5,7 @@
 		<title>About Me Page</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 	</head>
 	<body class="bio">
 		<nav>
