--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Resume Page</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 	</head>
 	<body class="index-body">
 		<nav>
