Response to comments
Changing File names to lowercase, adding sections, fixing html head

--- a/Biography.html
+++ b/Biography.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>About Me Page</title>
-		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 	</head>
 	<body class="bio">
 		<nav>
   			<ul class="header-class">
     			<li class="header-li"><a class="header-a" href="index.html">Resume</a></li>
-    			<li class="header-li"><a class="header-a" href="Biography.html">Interests + Projects</a></li>
-   	 			<li class="header-li"><a class="header-a" href="About.html">Biography</a></li>
+    			<li class="header-li"><a class="header-a" href="biography.html">Interests + Projects</a></li>
+   	 			<li class="header-li"><a class="header-a" href="about.html">Biography</a></li>
   			</ul>
 		</nav>
 		<div class="row">
@@ -38,27 +38,29 @@
 					<h4>Video Project:</h4>
 					<p> While in Nepal, I gave a speech at a local highschool. During my speech I spoke about life and education in the US.</p>
 					<video class="video" controls>
-  					<source src="media/SpeechClip.mp4" type="video/mp4">
+  					<source src="media/speechclip.mp4" type="video/mp4">
 					</video>
 					<p>Here is a short clip from that speech.</p>
     			</div>
     			</div>
-  
+  				
+  				<section>
   				<div class="rightcolumn">
    					 <div class="card">
       					<h2 class="title">Athletics:</h2>
        					<h4>Swimming + Running</h4>
       					<p> I have been a swimmer since I was in elementary school. I was a varsity swimmer in high school and swam for the "Swedish Fish" (Galter Life Center Swim Team).
 							My events included the 200m butterfly, 100m I.M., and 200m relay. Since the pool wasn't open during covid, I began to run. Since then, I have done it at least 3 days a week.</p>
-    					<img class="bioimg" src="media/SwimCap.png" alt="Swim Cap">
+    					<img class="bioimg" src="media/swimcap.png" alt="Swim Cap">
     				</div>
     				<div class="card">
       					<h3 class="title">Fantasy Football:</h3>
 						<p>I am currently in three leagues with friends and family. As the clock ticks down the on season starting, 
 							I have done a countless amount of mocks in preparation for the leagues. The pride and monetary value of fantasy football is fantastic, the thrill of winning your league can't be beat. With that being said, I hope to win all three of my leagues this year.</p>
-    					<img class="bioimg" src="media/Espn.png" alt="Swim Cap">
+    					<img class="bioimg" src="media/espn.png" alt="Swim Cap">
     				</div>
     			</div>
+    			</section>
     		</div>
 	</body>
 </html>
