--- a/About.html
+++ b/About.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>About Me Page</title>
-		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 	</head>
 	<body class="life-body">
 		<nav>
   			<ul class="header-class">
     			<li class="header-li"><a class="header-a" href="index.html">Resume</a></li>
-    			<li class="header-li"><a class="header-a" href="Biography.html">Interests + Projects</a></li>
-   	 			<li class="header-li"><a class="header-a" href="About.html">Biography</a></li>
+    			<li class="header-li"><a class="header-a" href="biography.html">Interests + Projects</a></li>
+   	 			<li class="header-li"><a class="header-a" href="about.html">Biography</a></li>
   			</ul>
 		</nav>
 		
@@ -25,7 +25,7 @@
 		I was born there and lived there till the age of 5. After my parents won a greencard lottery, we moved to New York. This was a big change, as Kathmandu and New York are very different. I attended preschool and kindergarden in New York.
 		After living in New York for 3 years, we moved to Chicago. From one big city to another. I then began elementary school in Chicago. </p>
 
-		<img class="about-img" src="media/Map.png" alt="Flight Tracker">
+		<img class="about-img" src="media/map.png" alt="Flight Tracker">
 		</div>
 		
 		<div class="about-header">
@@ -37,7 +37,7 @@
 		<p>After elementary school I transitioned into high school. I went to Von Steuben, here in Chicago. Here is where I decided to stick with one sport(swimming) and where I began to learn code.
 		I found my web development and web design classes to be the most interesting, hence why I am an ITM/Cybersecurity major now. Through my knowledge of HTML, I began to make websites. It started with a current events webpage and it went as far as creating the class webpage for my teacher. </p>
 		<p>Below is one of the first websites I ever made:</p>
-		<img class="about-img" src="media/FirstSite.png" alt="Nepal in a Map">
+		<img class="about-img" src="media/firstsite.png" alt="Nepal in a Map">
 		<p>Other than school, I held a number jobs. Such as working at Kohls and as a life guard. This was a great base for me, as it was my first taste of the real world. I understood what holding a job meant and the responsibility that came with it. 
 		<p> Lastly, travel was a huge part of my life during this time. My family and I would travel at least once a year. </p>
 		<p>Here is a list of all the places I have visited.</p>
