--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Resume Page</title>
-		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 	</head>
 	<body class="index-body">
 		<nav>
   			<ul class="header-class">
     			<li class="header-li"><a class="header-a" href="index.html">Resume</a></li>
-    			<li class="header-li"><a class="header-a" href="Biography.html">Interests + Projects</a></li>
-   	 			<li class="header-li"><a class="header-a" href="About.html">Biography</a></li>
+    			<li class="header-li"><a class="header-a" href="biography.html">Interests + Projects</a></li>
+   	 			<li class="header-li"><a class="header-a" href="about.html">Biography</a></li>
   			</ul>
 		</nav>
 		
@@ -39,6 +39,7 @@
 		<h4 class="index-date">June 2022  – August 2022</h4>
 		<p>During the summer of 2022, I worked at the CDW – Vernon Hills location. During my time, I installed and uninstalled hardware from laptops. Overtime, I gained valuable skills in the understanding of computer hardware and modification.</p>
 		
+		<section>
 		<h2><u>Projects</u></h2>
 		<h4>Network Infrastructure Design (Wired & Wireless):</h4>
 		<p>Created a working wired and wireless network design. This project was an example of what a real design proposal would be. Through this project, I am now familiar with network components and the creation of a LAN network. </p>
@@ -51,8 +52,9 @@
 			<li>2021-2022 Outstanding First Year Student In Applied Cybersecurity & Information Technology</li>
 			<li>2021-2022 Deans List Student</li>
 		</ul>
-	
-	
+		</section>
+		
+		<section>
 		<h2><u>Skills</u></h2>
 		<ul>
   			<li>Strong Collaborator</li>
@@ -61,15 +63,17 @@
   			<li>Knowledge of Python/HTML/Java</li>
   			<li>Inquisitive & Adaptable</li>
 		</ul>
-	
-		<h2><u>Education</u></h2>
+		</section>
 		
+		<section>
+		<h2><u>Education</u></h2>
 		<h4>Highschool:</h4>
 		<p>2017-2021</p>
 		<p>Von Steuben High School (Scholars Program)</p>
 		<h4>University:</h4>
 		<p>2021-Present</p>
 		<p>Illinois Institue of Technology</p>
+		</section>
 	</div>
 	</body>
 </html>
