Sections being added
Adding more section code

--- a/About.html
+++ b/About.html
@@ -32,6 +32,7 @@
 		<h3>Middle Life:</h3>
 		</div>
 		
+		<section>
 		<div class="about-text">
 		<p> During my elementary school life, I was on the basketball and volleyball team. I was also on the math team and guitar club. </p>
 		<p>After elementary school I transitioned into high school. I went to Von Steuben, here in Chicago. Here is where I decided to stick with one sport(swimming) and where I began to learn code.
@@ -53,7 +54,9 @@
 			<li>Netherlands</li>
 		</ul>
 		</div>
-			
+		</section>
+		
+		<section>	
 		<div class="about-header">
 		<h3>Currently:</h3>
 		</div>
@@ -64,6 +67,7 @@
 		<p>If you want to read about my other interests and what I do in my freetime, feel free to check out the Interests + Projects page.</p>
 		</div>
 		</div>
+		</section>
 	</body>
 </html>
 
