--- a/Biography.html
+++ b/Biography.html
@@ -23,6 +23,8 @@
       				<p>I am a huge sports fan. Besides baseball and golf, I will watch anything. Soccer, basketball, football, tennis, hockey (playoff only).I have been to multiple bears and bulls games and two soccer games in England. On top of watching the games, I also play fantasy football, soccer, and basketball. You can read more about that below.
 					</p>
 				</div>
+				
+				<section>
     			<div class="card">
       				<h2 class="title">Projects:</h2>
       				<h3>Java Project:</h3>
@@ -43,6 +45,7 @@
 					<p>Here is a short clip from that speech.</p>
     			</div>
     			</div>
+    			</section>
   				
   				<section>
   				<div class="rightcolumn">
