--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <title>About Me Page</title>
-        <link rel="stylesheet" href="css/normalize.css" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong" />
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     </head>
     <body class="life-body">
         <nav>
@@ -43,7 +43,7 @@
                         creating the class webpage for my teacher.
                     </p>
                     <p>Below is one of the first websites I ever made:</p>
-                    <img class="about-img" src="media/firstsite.png" alt="Nepal in a Map" />
+                    <img class="about-img" src="media/firstsite.png" alt="Nepal in a Map">
                     <p>
                         Other than school, I held a number jobs. Such as working at Kohls and as a life guard. This was a great base for me, as it was my first taste of the real world. I understood what holding a job meant and the
                         responsibility that came with it.
