--- a/about.html
+++ b/about.html
@@ -27,42 +27,40 @@
                     Chicago.
                 </p>
 
-                <img class="about-img" src="media/map.png" alt="Flight Tracker" />
+                <img class="about-img" src="media/map.png" alt="Flight Tracker">
             </div>
 
             <div class="about-header">
                 <h3>Middle Life:</h3>
             </div>
 
-            <section>
-                <div class="about-text">
-                    <p>During my elementary school life, I was on the basketball and volleyball team. I was also on the math team and guitar club.</p>
-                    <p>
-                        After elementary school I transitioned into high school. I went to Von Steuben, here in Chicago. Here is where I decided to stick with one sport(swimming) and where I began to learn code. I found my web development
-                        and web design classes to be the most interesting, hence why I am an ITM/Cybersecurity major now. Through my knowledge of HTML, I began to make websites. It started with a current events webpage and it went as far as
-                        creating the class webpage for my teacher.
-                    </p>
-                    <p>Below is one of the first websites I ever made:</p>
-                    <img class="about-img" src="media/firstsite.png" alt="Nepal in a Map">
-                    <p>
-                        Other than school, I held a number jobs. Such as working at Kohls and as a life guard. This was a great base for me, as it was my first taste of the real world. I understood what holding a job meant and the
-                        responsibility that came with it.
-                    </p>
-                    <p>Lastly, travel was a huge part of my life during this time. My family and I would travel at least once a year.</p>
-                    <p>Here is a list of all the places I have visited.</p>
-                    <ul class="about-list">
-                        <li>20 US States (Too many to name)</li>
-                        <li>England</li>
-                        <li>UAE -- Dubai</li>
-                        <li>Canada</li>
-                        <li>Mexico</li>
-                        <li>Qatar</li>
-                        <li>Singapore</li>
-                        <li>France</li>
-                        <li>Netherlands</li>
-                    </ul>
-                </div>
-            </section>
+            <div class="about-text">
+                <p>During my elementary school life, I was on the basketball and volleyball team. I was also on the math team and guitar club.</p>
+                <p>
+                    After elementary school I transitioned into high school. I went to Von Steuben, here in Chicago. Here is where I decided to stick with one sport(swimming) and where I began to learn code. I found my web development
+                    and web design classes to be the most interesting, hence why I am an ITM/Cybersecurity major now. Through my knowledge of HTML, I began to make websites. It started with a current events webpage and it went as far as
+                    creating the class webpage for my teacher.
+                </p>
+                <p> Below is one of the first websites I ever made:</p>
+                <img class="about-img" src="media/firstsite.png" alt="Nepal in a Map">
+                <p>
+                	Other than school, I held a number jobs. Such as working at Kohls and as a life guard. This was a great base for me, as it was my first taste of the real world. I understood what holding a job meant and the
+                    responsibility that came with it.
+                 </p>
+                <p>Lastly, travel was a huge part of my life during this time. My family and I would travel at least once a year.</p>
+                <p>Here is a list of all the places I have visited.</p>
+                <ul class="about-list">
+                    <li>20 US States (Too many to name)</li>
+                    <li>England</li>
+                    <li>UAE -- Dubai</li>
+                    <li>Canada</li>
+                    <li>Mexico</li>
+                    <li>Qatar</li>
+                    <li>Singapore</li>
+                    <li>France</li>
+                    <li>Netherlands</li>
+                </ul>
+            </div>
 
             <section>
                 <div class="about-header">
